--- a/index.html
+++ b/index.html
@@ -46,15 +46,93 @@
             </div>
         </div>
          <!-- slider -->
+        
         <div id="content">
+             <!-- about -->
             <div class="content-section">
                 <h2 class="section-heading">THE BAND</h2>
                 <p class="section-slogan">We love music!</p>
                 <p class="about-content">
                     We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
+                <!-- Member List -->
+                <div class="member-list">
+                    <div class="member-item">
+                        <p class="member-name">Name</p>
+                        <img src="/assets/img/member/img.jpg" alt="Name" class="memmber-image">
+                    </div>
+
+                    <div class="member-item">
+                        <p class="member-name">Name</p>
+                        <img src="/assets/img/member/img.jpg" alt="Name" class="memmber-image">
+                    </div>
+
+                    <div class="member-item">
+                        <p class="member-name">Name</p>
+                        <img src="/assets/img/member/img.jpg" alt="Name" class="memmber-image">
+                    </div>
+                </div>
+                <div class="clear"></div>
+                <!-- Member List -->
             </div>
+             <!-- about -->
+
+              <!-- tour -->
+            <div class="tour-section">
+                <div class="content-section">
+                <h2 class="section-heading text-white">TOUR DATES</h2>
+                <p class="section-slogan text-white">Lorem ipsum we'll play you some music.<br>
+                    Remember to book your tickets!</p>
+                <ul class="ticket-list">
+                    <li>September <span class="sold-out">Sold out</span></li>
+                    <li>Octorber <span class="sold-out">Sold out</span></li>
+                    <li>November <span class="quantity">3</span></li>
+                </ul>
+
+                <!-- place -->
+                <div class="place-list">
+                    <div class="place-item">
+                        <img src="./assets/img/tour-place/paris.jpg" alt="Paris" class="place-img">
+                        <div class="place-body">
+                            <h3 class="place-heading">Paris</h3>
+                            <p class="place-time">Friday 27 November 2015</p>
+                            <a href="#" class="place-buy-btn">Buy Tickets</a>
+                        </div>
+                    </div>
+
+                    <div class="place-item">
+                        <img src="./assets/img/tour-place/newyork.jpg" alt="Paris" class="place-img">
+                        <div class="place-body">
+                            <h3 class="place-heading">New York</h3>
+                            <p class="place-time">Saturday 28 November 2015</p>
+                            <a href="#" class="place-buy-btn">Buy Tickets</a>
+                        </div>
+                    </div>
+
+                    <div class="place-item">
+                        <img src="./assets/img/tour-place/sanfran.jpg" alt="Paris" class="place-img">
+                        <div class="place-body">
+                            <h3 class="place-heading">San Francisco</h3>
+                            <p class="place-time">Sunday 29 November 2015</p>
+                            <a href="#" class="place-buy-btn">Buy Tickets</a>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <!-- place -->
+
+            </div>
+            </div>
+             <!-- tour -->
+
+              <!-- contact -->
+            <div class="content-section">
+                <h2 class="section-heading">Contact</h2>
+                <p class="section-slogan">We love our fans!</p>
+            </div>
+             <!-- contact -->
         </div>
+         
 
         <div id="footer">
 
