--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
                     We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
                 <!-- Member List -->
-                <div class="member-list">
-                    <div class="member-item">
+                <div class="row member-list">
+                    <div class="col col-third text-center">
                         <p class="member-name">Name</p>
                         <img src="/assets/img/member/img.jpg" alt="Name" class="memmber-image">
                     </div>
 
-                    <div class="member-item">
+                    <div class="col col-third text-center">
                         <p class="member-name">Name</p>
                         <img src="/assets/img/member/img.jpg" alt="Name" class="memmber-image">
                     </div>
 
-                    <div class="member-item">
+                    <div class="col col-third text-center">
                         <p class="member-name">Name</p>
                         <img src="/assets/img/member/img.jpg" alt="Name" class="memmber-image">
                     </div>
@@ -90,8 +90,8 @@
                 </ul>
 
                 <!-- place -->
-                <div class="place-list">
-                    <div class="place-item">
+                <div class="row place-list">
+                    <div class="col col-third">
                         <img src="./assets/img/tour-place/paris.jpg" alt="Paris" class="place-img">
                         <div class="place-body">
                             <h3 class="place-heading">Paris</h3>
@@ -100,7 +100,7 @@
                         </div>
                     </div>
 
-                    <div class="place-item">
+                    <div class="col col-third">
                         <img src="./assets/img/tour-place/newyork.jpg" alt="Paris" class="place-img">
                         <div class="place-body">
                             <h3 class="place-heading">New York</h3>
@@ -109,7 +109,7 @@
                         </div>
                     </div>
 
-                    <div class="place-item">
+                    <div class="col col-third">
                         <img src="./assets/img/tour-place/sanfran.jpg" alt="Paris" class="place-img">
                         <div class="place-body">
                             <h3 class="place-heading">San Francisco</h3>
