Add Contact form and edit something on header

--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
                         <img src="/assets/img/member/img.jpg" alt="Name" class="memmber-image">
                     </div>
                 </div>
-                <div class="clear"></div>
                 <!-- Member List -->
             </div>
              <!-- about -->
@@ -117,7 +116,6 @@
                             <button class="place-buy-btn js-buy-ticket">Buy Tickets</button>
                         </div>
                     </div>
-                    <div class="clear"></div>
                 </div>
                 <!-- place -->
 
@@ -129,7 +127,36 @@
             <div class="content-section">
                 <h2 class="section-heading">Contact</h2>
                 <p class="section-slogan">We love our fans!</p>
+
+                <div class="row contact-content">
+                    <div class="col col-half contact-info">
+                        <p><i class="ti-location-pin">Chicago, US</i></p>
+                        <p><i class="ti-mobile">Phone: +00 1515151515</i></p>
+                        <p><i class="ti-email">Email: mail@mail.com</i></p>
+                    </div>
+                    <div class="col col-half contact-form">
+                        <form action="">
+                            <div class="row">
+                                <div class="col col-half">
+                                    <input type="text" class="form-control" required placeholder="Name">
+                                </div>
+                                <div class="col col-half">
+                                    <input type="email" class="form-control" required placeholder="Email">
+                                </div>
+                            </div>
+                            <div class="row mt-8">
+                                <div class="col col-full">
+                                    <input type="text" class="form-control" required placeholder="Comment">
+                                </div>
+                            </div>
+                            <input type="submit" value="SEND" class="mt-16 form-submit">
+                        </form>
+                    </div>
+                </div>
+                
             </div>
+
+
              <!-- contact -->
 
              <!-- modal -->
