--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>The Band</title>
     <link rel="shortcut icon" href="./assets/img/favicon/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href=" ./assets/css/style.css">
+    <link rel="stylesheet" href=" ./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/img/themify-icons.css">
 </head>
 <body>
@@ -34,6 +35,10 @@
             <!-- search button -->
             <div class="search-btn">
                 <i class="search-icon ti-search"></i>
+            </div>
+
+            <div id="mobile-menu" class="mobile-menu-btn">
+                <i class="menu-icon ti-menu"></i>
             </div>
             <!-- search button -->
         </div>
