CONTINUE edit responsive in member-list and place-list

--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
                 </p>
                 <!-- Member List -->
                 <div class="row member-list">
-                    <div class="col col-third text-center">
+                    <div class="col col-third s-col-ful mt-16 text-center ">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/member/img.jpg" alt="Name" class="memmber-image">
                     </div>
 
-                    <div class="col col-third text-center">
+                    <div class="col col-third s-col-ful mt-16 text-center ">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/member/img.jpg" alt="Name" class="memmber-image">
                     </div>
 
-                    <div class="col col-third text-center">
+                    <div class="col col-third s-col-ful mt-16 text-center ">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/member/img.jpg" alt="Name" class="memmber-image">
                     </div>
@@ -96,7 +96,7 @@
 
                 <!-- place -->
                 <div class="row place-list">
-                    <div class="col col-third">
+                    <div class="col col-third s-col-full mt-16">
                         <img src="./assets/img/tour-place/paris.jpg" alt="Paris" class="place-img">
                         <div class="place-body">
                             <h3 class="place-heading">Paris</h3>
@@ -105,7 +105,7 @@
                         </div>
                     </div>
 
-                    <div class="col col-third">
+                    <div class="col col-third s-col-full mt-16">
                         <img src="./assets/img/tour-place/newyork.jpg" alt="Paris" class="place-img">
                         <div class="place-body">
                             <h3 class="place-heading">New York</h3>
@@ -114,7 +114,7 @@
                         </div>
                     </div>
 
-                    <div class="col col-third">
+                    <div class="col col-third s-col-full mt-16">
                         <img src="./assets/img/tour-place/sanfran.jpg" alt="Paris" class="place-img">
                         <div class="place-body">
                             <h3 class="place-heading">San Francisco</h3>
