--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
                 </p>
                 <!-- Member List -->
                 <div class="row member-list">
-                    <div class="col col-third s-col-ful mt-16 text-center ">
+                    <div class="col col-third s-col-full mt-32 text-center ">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/member/img.jpg" alt="Name" class="memmber-image">
                     </div>
 
-                    <div class="col col-third s-col-ful mt-16 text-center ">
+                    <div class="col col-third s-col-full mt-32 text-center ">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/member/img.jpg" alt="Name" class="memmber-image">
                     </div>
 
-                    <div class="col col-third s-col-ful mt-16 text-center ">
+                    <div class="col col-third s-col-full mt-32 text-center ">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/member/img.jpg" alt="Name" class="memmber-image">
                     </div>
@@ -135,18 +135,18 @@
                 <p class="section-slogan">We love our fans!</p>
 
                 <div class="row contact-content">
-                    <div class="col col-half contact-info">
+                    <div class="col col-half s-col-full contact-info">
                         <p><i class="ti-location-pin">Chicago, US</i></p>
-                        <p><i class="ti-mobile">Phone: +00 1515151515</i></p>
+                        <p><i class="ti-mobile">Phone: +001515151515</i></p>
                         <p><i class="ti-email">Email: mail@mail.com</i></p>
                     </div>
-                    <div class="col col-half contact-form">
+                    <div class="col col-half s-col-full contact-form">
                         <form action="">
                             <div class="row">
-                                <div class="col col-half">
+                                <div class="col s-col-full col-half">
                                     <input type="text" class="form-control" required placeholder="Name">
                                 </div>
-                                <div class="col col-half">
+                                <div class="col s-col-full s-mt-8 col-half">
                                     <input type="email" class="form-control" required placeholder="Email">
                                 </div>
                             </div>
@@ -155,7 +155,7 @@
                                     <input type="text" class="form-control" required placeholder="Comment">
                                 </div>
                             </div>
-                            <input type="submit" value="SEND" class="mt-16 form-submit">
+                            <input type="submit" value="SEND" class="mt-16 s-full-width form-submit">
                         </form>
                     </div>
                 </div>
