Edit responsive SEND CONTACT in Iphone

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                 <div class="row contact-content">
                     <div class="col col-half s-col-full contact-info">
                         <p><i class="ti-location-pin">Chicago, US</i></p>
-                        <p><i class="ti-mobile">Phone: +001515151515</i></p>
-                        <p><i class="ti-email">Email: mail@mail.com</i></p>
+                        <p><i class="ti-mobile">Phone: <a href="tel:+001515151515">+00151515151</a></i></p>
+                        <p><i class="ti-email">Email: <a href="mailto:mail@mail.com">mail@mail.com</a></i></p>
                     </div>
                     <div class="col col-half s-col-full contact-form">
                         <form action="">
@@ -155,7 +155,7 @@
                                     <input type="text" class="form-control" required placeholder="Comment">
                                 </div>
                             </div>
-                            <input type="submit" value="SEND" class="mt-16 s-full-width form-submit">
+                            <input type="submit" value="SEND" class="contact-submit-btn mt-16 s-full-width form-submit">
                         </form>
                     </div>
                 </div>
