--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <!-- search button -->
         </div>
         <!-- slider -->
-        <div id="slider" style="background-image: url(./assets/img/slider/img1.jpg)">
+        <div id="slider">
             <div class="text-content">
                 <div class="text-heading">
                     <h2>New York</h2>
